OcctSharp/src/OcctSharp.Native/include/OcctSharp.Native.h

typedef enum OcctSharp_Status
{
  OCCTSHARP_STATUS_SUCCESS = 0,
  OCCTSHARP_STATUS_INVALID_ARGUMENT = 1,
  OCCTSHARP_STATUS_NULL_HANDLE = 2,
  OCCTSHARP_STATUS_OCCT_FAILURE = 3,
  OCCTSHARP_STATUS_STANDARD_EXCEPTION = 4,
  OCCTSHARP_STATUS_UNKNOWN_EXCEPTION = 5,
  OCCTSHARP_STATUS_FILE_IO_ERROR = 6,
  OCCTSHARP_STATUS_TRANSFER_FAILED = 7,
  OCCTSHARP_STATUS_INVALID_HANDLE = 8,
  OCCTSHARP_STATUS_TYPE_MISMATCH = 9
} OcctSharp_Status;
typedef struct OcctSharp_ShapeHandle OcctSharp_ShapeHandle;
typedef struct OcctSharp_OcafDocumentHandle OcctSharp_OcafDocumentHandle;
typedef struct OcctSharp_DetailedMeshVertex
{
  double x;
  double y;
  double z;
  double normal_x;
  double normal_y;
  double normal_z;
  double u;
  double v;
  int32_t has_uv;
} OcctSharp_DetailedMeshVertex;
typedef struct OcctSharp_DetailedMeshTriangle
{
  int32_t vertex_a;
  int32_t vertex_b;
  int32_t vertex_c;
  int32_t face_index;
  int32_t is_reversed;
} OcctSharp_DetailedMeshTriangle;
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_advanced_mesh_count(
  const OcctSharp_ShapeHandle* shape,
  double linear_deflection, double angular_deflection, double minimum_size,
  int32_t relative, int32_t parallel, int32_t internal_vertices,
  int32_t control_surface_deflection,
  int32_t* out_vertex_count, int32_t* out_triangle_count, int32_t* out_face_count);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_shape_advanced_mesh_snapshot(
  const OcctSharp_ShapeHandle* shape,
  double linear_deflection, double angular_deflection, double minimum_size,
  int32_t relative, int32_t parallel, int32_t internal_vertices,
  int32_t control_surface_deflection,
  OcctSharp_DetailedMeshVertex* vertices, int32_t vertex_capacity,
  int32_t* out_vertex_count,
  OcctSharp_DetailedMeshTriangle* triangles, int32_t triangle_capacity,
  int32_t* out_triangle_count, int32_t* out_face_count);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_read_gltf(
  const char* file_path, OcctSharp_OcafDocumentHandle** out_document);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_read_obj(
  const char* file_path, OcctSharp_OcafDocumentHandle** out_document);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_write_gltf(
  const OcctSharp_OcafDocumentHandle* document, const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_write_obj(
  const OcctSharp_OcafDocumentHandle* document, const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_write_ply(
  const OcctSharp_OcafDocumentHandle* document, const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_document_write_vrml(
  const OcctSharp_OcafDocumentHandle* document, const char* file_path);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_label_set_visual_material(
  OcctSharp_OcafDocumentHandle* document, const char* entry,
  const char* name, int32_t name_length,
  double red, double green, double blue, double alpha,
  double metallic, double roughness,
  double emissive_red, double emissive_green, double emissive_blue,
  double refraction_index, int32_t alpha_mode, double alpha_cutoff);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_label_visual_material_info(
  const OcctSharp_OcafDocumentHandle* document, const char* entry,
  int32_t* has_material,
  double* red, double* green, double* blue, double* alpha,
  double* metallic, double* roughness,
  double* emissive_red, double* emissive_green, double* emissive_blue,
  double* refraction_index, int32_t* alpha_mode, double* alpha_cutoff);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_label_visual_material_name_utf8_length(
  const OcctSharp_OcafDocumentHandle* document, const char* entry,
  int32_t* has_material, int32_t* length);
OCCTSHARP_API OcctSharp_Status OCCTSHARP_CALL occtsharp_xde_label_visual_material_name_to_utf8(
  const OcctSharp_OcafDocumentHandle* document, const char* entry,
  char* buffer, int32_t capacity, int32_t* written);